crates/pcb-zen-core/tests/snapshots/component__component_duplicate_pin_names.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "test_comp",
                    footprint: "test_footprint",
                    prefix: "U",
                    connections: {
                        "in": FrozenValue(
                            Net {
                                name: "in",
                                id: "<ID>",
                            },
                        ),
                        "out": FrozenValue(
                            Net {
                                name: "out",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "symbol_name": FrozenValue(
                            "TestSymbol",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: Some(
                                "TestSymbol",
                            ),
                            source_uri: "package://test/duplicate_pins_symbol.kicad_sym",
                            pins: {
                                "1": "in",
                                "2": "out",
                                "3": "in",
                            },
                            properties: {
                                "Reference": "U",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
