crates/pcb-zen-core/tests/snapshots/component__component_infers_spice_model_from_symbol_malformed_params.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
Error: test.zen:5:1-13:2 Invalid PARAMS syntax: '='
