crates/pcb-zen-core/tests/snapshots/component__component_inherits_reference_prefix.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "MyComponent1",
                    footprint: "SOIC-8",
                    prefix: "IC",
                    connections: {
                        "IN": FrozenValue(
                            Net {
                                name: "in_signal",
                                id: "<ID>",
                            },
                        ),
                        "OUT": FrozenValue(
                            Net {
                                name: "out_signal",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "symbol_name": FrozenValue(
                            "MyIC",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: Some(
                                "MyIC",
                            ),
                            source_uri: "package://test/ic_symbol.kicad_sym",
                            pins: {
                                "1": "IN",
                                "2": "OUT",
                            },
                            properties: {
                                "Reference": "IC",
                            },
                        },
                    ),
                },
            ),
            FrozenValue(
                Component {
                    name: "MyComponent2",
                    footprint: "SOIC-8",
                    prefix: "U",
                    connections: {
                        "IN": FrozenValue(
                            Net {
                                name: "in2",
                                id: "<ID>",
                            },
                        ),
                        "OUT": FrozenValue(
                            Net {
                                name: "out2",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "symbol_name": FrozenValue(
                            "MyIC",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: Some(
                                "MyIC",
                            ),
                            source_uri: "package://test/ic_symbol.kicad_sym",
                            pins: {
                                "1": "IN",
                                "2": "OUT",
                            },
                            properties: {
                                "Reference": "IC",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
