crates/pcb-zen-core/tests/snapshots/component__component_manufacturer_from_symbol.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
Warning: test.zen:5:1-13:2 MPN must be specified if manufacturer is specified
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "test_comp",
                    manufacturer: "ACME Corp",
                    footprint: "test_footprint",
                    prefix: "U",
                    connections: {
                        "GND": FrozenValue(
                            Net {
                                name: "GND",
                                id: "<ID>",
                            },
                        ),
                        "VCC": FrozenValue(
                            Net {
                                name: "VCC",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "symbol_name": FrozenValue(
                            "TestSymbol",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: Some(
                                "TestSymbol",
                            ),
                            source_path: "package://test/test_symbol.kicad_sym",
                            pins: {
                                "1": "VCC",
                                "2": "GND",
                            },
                            properties: {
                                "Manufacturer_Name": "ACME Corp",
                                "Reference": "U",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
